test/sema/typeck/method/method-defined-twice-3.out
error: element with name `bar` already exists at method-defined-twice-3.dora:3:5.
--> method-defined-twice-3.dora:4:5
 | impl Foo {
 |     fn bar(_a: Int32) {}
 |     fn bar(_a: Int32): Int32 { 0 }
       ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 | }
 | 
1 error found.
