test/sema/typeck/method/method-defined-twice-3.dora
class Foo
impl Foo {
    fn bar(_a: Int32) {}
    fn bar(_a: Int32): Int32 { 0 }
}
